--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,33 +3,48 @@ version: '3'
 services:
 
   odoo:
-    
+
+    container_name: odoo
+
     image: odoo:17.0
 
     env_file: .env
 
     depends_on:
-    
       - postgres
 
     ports:
-    
-      - "8069:8069"
-    
+      - 8069:8069
+
     volumes:
-    
       - data:/var/lib/odoo
 
   postgres:
+
+    container_name: odoo_db
 
     image: postgres:latest
 
     env_file: .env
 
     volumes:
-    
       - db:/var/lib/postgresql@17/data/pgdata
-    
+
+  nginx:
+
+    container_name: nginx_proxy
+
+    image: nginx:latest
+
+    volumes:
+      - /root/odoo/odoo.conf:/etc/nginx/conf.d/odoo.conf
+
+    ports:
+      - 80:80
+
+    links:
+      - odoo
+
 volumes:
 
   data:
